react-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
    - port: 80
      targetPort: 80
